--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,10 @@ a {
   box-sizing: border-box;
 }
 
+.x-spacing {
+  @apply md:px-20 px-2;
+}
+
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
