--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,12 +25,20 @@ a {
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+.title {
+  @apply text-4xl font-semibold;
+}
+
 .text-header {
-  @apply text-3xl font-semibold;
+  @apply text-2xl;
 }
 
 .text-subheader {
   @apply  text-base sm:text-lg;
+}
+
+.text-subheader-uc {
+  @apply  text-xs uppercase;
 }
 
 .footer-list {
@@ -51,4 +59,13 @@ a {
 
 .cart, .home {
   @apply text-sm sm:text-base;
+}
+
+.form-input-container {
+  @apply w-full md:w-full px-3 mb-2;
+}
+
+.form-input {
+  @apply appearance-none block w-full bg-white text-gray-900 border
+  border-gray-400 rounded-sm py-3 px-3 leading-tight focus:outline-none focus:border-indigo-400;
 }
