--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,3 +69,7 @@ a {
   @apply appearance-none block w-full bg-white text-gray-900 border
   border-gray-400 rounded-sm py-3 px-3 leading-tight focus:outline-none focus:border-indigo-400;
 }
+
+.form-error-msg {
+  @apply flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1;
+}
