--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  background-color: white;
+}
+
+.hero-title-font {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.hero-title span {
+  color: #CBA95D;
 }
 
 a {
@@ -24,6 +34,30 @@ a {
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.hero-title {
+  @apply md:text-7xl text-5xl font-bold;
+}
+
+.hero-subtitle {
+  @apply text-xl;
+}
+
+.hero-btn {
+  @apply bg-[#4D4437] text-white md:px-6 px-4 py-2 w-fit hover:bg-gray-700 md:text-xl text-base;
+}
+
+.text-title {
+  @apply text-4xl uppercase;
+}
+
+.text-subtitle {
+  @apply text-base uppercase text-[#2C5F3E] font-bold;
+}
+
+.logo {
+  @apply hero-title-font font-bold text-2xl text-[#2C5F3E];
+}
 
 .title {
   @apply text-4xl font-semibold;
