--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,7 +110,7 @@ a {
 
 .form-input {
   @apply appearance-none block w-full bg-white text-gray-900 border
-  border-gray-400 rounded-sm md:p-3 p-2 leading-tight focus:outline-none focus:border-indigo-400;
+   rounded-sm md:p-3 p-2 leading-tight focus:outline-none ;
 }
 
 .form-error-msg {
