--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@ a {
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-.text-green {
+.text-custom-green {
   @apply text-[#2C5F3E];
 }
 
@@ -53,7 +53,7 @@ a {
 }
 
 .hero-btn {
-  @apply bg-[#4D4437] text-white md:px-6 px-4 py-2 w-fit hover:bg-gray-700 md:text-xl text-base;
+  @apply bg-[#4D4437] text-white md:px-6 px-4 py-2 w-fit hover:bg-[#342e26] md:text-xl text-base rounded-sm;
 }
 
 .text-title {
