--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,3 +116,14 @@ a {
 .form-error-msg {
   @apply flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1;
 }
+
+.loading-container {
+  @apply z-[55] overflow-auto bottom-0 right-0 w-full h-full fixed backdrop-blur-lg backdrop-grayscale duration-500 ease-in-out delay-100;
+}
+.loading-width {
+  @apply z-[56] relative p-3 mx-auto my-0 max-w-full w-[600px];
+}
+.loading {
+  @apply relative top-[350px] flex-col overflow-hidden z-10 ease-linear p-5 justify-center animate-spin
+  flex align-middle items-center w-full;
+}
