--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,15 @@ a {
   @apply md:px-20 px-2;
 }
 
+.category-btn-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.category-btn-container::-webkit-scrollbar {
+  display: none;
+}
+
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
