--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   /* background-color: white; */
 }
 
@@ -15,7 +15,7 @@ body {
 }
 
 .hero-title span {
-  color: #CBA95D;
+  color: #cba95d;
 }
 
 a {
@@ -40,10 +40,9 @@ a {
   display: none;
 }
 
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 .text-custom-green {
   @apply text-[#2C5F3E];
@@ -62,7 +61,7 @@ a {
 }
 
 .hero-btn {
-  @apply bg-[#4D4437] text-white md:px-6 px-4 py-2 w-fit hover:bg-[#342e26] md:text-xl text-base rounded-sm;
+  @apply bg-[#4D4437] text-white md:px-6 px-4 py-2 hover:bg-[#342e26] md:text-xl text-base rounded-sm;
 }
 
 .text-title {
@@ -86,19 +85,19 @@ a {
 }
 
 .text-subheader {
-  @apply  text-base sm:text-lg;
+  @apply text-base sm:text-lg;
 }
 
 .text-subheader-uc {
-  @apply  md:text-base text-sm uppercase;
+  @apply md:text-base text-sm uppercase;
 }
 
 .footer-list {
-  @apply pb-8
+  @apply pb-8;
 }
 
 .item-quantity-btn {
-  @apply border-2 md:px-4 md:py-1 px-2  mr-2 flex items-center w-full max-w-[8rem] justify-between
+  @apply border-2 md:px-4 md:py-1 px-2  mr-2 flex items-center w-full max-w-[8rem] justify-between;
 }
 
 .item-quantity-btn p {
@@ -106,10 +105,11 @@ a {
 }
 
 .item-quantity-btn span {
-  @apply text-xl
+  @apply text-xl;
 }
 
-.cart, .home {
+.cart,
+.home {
   @apply text-sm sm:text-base;
 }
 
@@ -119,7 +119,7 @@ a {
 
 .form-input {
   @apply appearance-none block w-full bg-white text-gray-900 border
-   rounded-sm md:p-3 p-2 leading-tight focus:outline-none ;
+   rounded-sm md:p-3 p-2 leading-tight focus:outline-none;
 }
 
 .form-error-msg {
