--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,3 +136,19 @@ a {
   @apply relative top-[350px] flex-col overflow-hidden z-10 ease-linear p-5 justify-center animate-spin
   flex align-middle items-center w-full;
 }
+
+.step-circle-active {
+  @apply w-10 h-10 bg-blue-600 mx-auto rounded-full text-lg text-white flex items-center cursor-pointer delay-500;
+}
+
+.step-circle {
+  @apply w-10 h-10 bg-white border-2 border-gray-200 mx-auto rounded-full text-lg text-white flex items-center cursor-pointer delay-500;
+}
+
+.step-bar-active {
+  @apply bg-blue-600 text-xs leading-none py-1 text-center text-gray-300 rounded duration-500 w-full ease-linear;
+}
+
+.step-bar {
+  @apply bg-blue-600 text-xs leading-none py-1 text-center text-gray-300 rounded w-[20%] delay-500 duration-500 ease-linear;
+}
